<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name </string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_sum">Order Summary</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="add_whipped_cream">Add Whipped Cream? </string>
    <string name="add_chocolate">Add Chocolate? </string>
    <string name="total">Total: </string>
    <string name="thank_you">Thank You!</string>

    <string name="just_java">Just Java Order for </string>
    <string name="toppings">Toppings</string>


    <string name="no_more">You cannot order more than 100 coffees.</string>
    <string name="no_less">You cannot have less than 1 coffee.</string>
</resources>
